--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -36,12 +36,16 @@
   color: #202123;
   margin: 16px 0 40px;
 }
+.main h4 {
+  color: rgb(0, 0, 0, 0.6);
+  margin-top: -10px;
+}
 .main form {
   display: flex;
   flex-direction: column;
   width: 320px;
 }
-.main input[type="text"] {
+.main input[type="text"], .main textarea {
   padding: 12px 16px;
   border: 1px solid #10a37f;
   border-radius: 4px;
